--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^11.8.0",
     "jotai": "^2.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
