--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@heroicons/react": "^2.1.5",
+    "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
     "framer-motion": "^11.8.0",
     "jotai": "^2.10.0",
