--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "firebase": "^10.13.2",
     "framer-motion": "^11.8.0",
     "jotai": "^2.10.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.26.2",
+    "react-simple-pull-to-refresh": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
