--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^2.9.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
+    "@react-google-maps/api": "^2.19.3",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
-    "framer-motion": "^11.8.0",
+    "framer-motion": "^11.10.0",
     "jotai": "^2.10.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
