--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
     "browser-image-compression": "^2.0.2",
+    "compromise": "^14.14.0",
     "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
     "framer-motion": "^11.8.0",
@@ -25,14 +26,17 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-onesignal": "^3.0.1",
     "react-router-dom": "^6.26.2",
-    "react-simple-pull-to-refresh": "^1.3.3"
+    "react-simple-pull-to-refresh": "^1.3.3",
+    "stopword": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/stopword": "^2.0.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
