--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ dist-ssr
 .env
 /dev-dist
 .cursorignore
-.cursorrules
+.rules
 /.firebase
 package-lock.json
 .ref.txt
 *.tsbuildinfo
+/test-images
