--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-onesignal": "^3.0.1",
     "react-router-dom": "^6.26.2",
     "react-simple-pull-to-refresh": "^1.3.3",
-    "stopword": "^3.1.1"
+    "stopword": "^3.1.1",
+    "where-app": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
