--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-onesignal": "^3.0.1",
     "react-router-dom": "^6.26.2",
     "react-simple-pull-to-refresh": "^1.3.3",
+    "react-webcam": "^7.2.0",
     "stopword": "^3.1.1",
     "where-app": "file:"
   },
