--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-onesignal": "^3.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "react-simple-pull-to-refresh": "^1.3.3",
     "stopword": "^3.1.1",
