--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui"
+    "test": "vitest store.test.ts",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@firebase/rules-unit-testing": "^3.0.4",
     "@playwright/test": "^1.48.2",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^22.8.1",
@@ -61,6 +64,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vite-plugin-pwa": "^0.20.5"
+    "vite-plugin-pwa": "^0.20.5",
+    "vitest": "^1.6.0"
   }
 }
